--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -113,7 +113,12 @@
     </div>
     <div class="panel panel-default" style="padding:10px;">
         {# TODO #}
-        <center><strong>活跃用户</strong></center>
+        <div style="padding:9px"><center><strong>活跃用户</strong></center></div>
+        <div style="padding:3px"><span class="ranklist">1</span> optiplex9000</br></div>
+        <div style="padding:3px"><span class="ranklist">2</span> I_LIKE_CHEESE108</br></div>
+        <div style="padding:3px"><span class="ranklist">3</span> monsieur-chat</br></div>
+        <div style="padding:3px"><span class="ranklist">4</span> sircam22</br></div>
+        <div style="padding:3px"><span class="ranklist">5</span> photoh</br></div>
     </div>
     {% comment %}
     <div class="panel panel-default" style="padding:10px;"></div>
@@ -323,6 +328,11 @@ function prepost(e) {
 </script>
 
 {% block footer %}
+<div id="footer">
+    <div class="footer-inner">
+        <p class="footer-about"> Copyright © 2014 - 2015 Tengmanpinglun. All Rights Reserved. 藤蔓评论 版权所有 </p>
+    </div>
+</div>
 {% endblock %}
 </body>
 </html>
