tuning css for main part (mobile) and footer

--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -69,7 +69,7 @@
 
   {% include "auth/auth_modal.html" %}
 
-<div class="container">
+<div class="container main">
   <div class="col-lg-9">
   <div class="alert-messages" id="message-drawer" style="opacity: 0; display: none; float:top">
   	<div class="message ">
