--- a/server/vine_comment/static/css/base.css
+++ b/server/vine_comment/static/css/base.css
@@ -1,3 +1,6 @@
+.container.main {
+    padding: 0;
+}
 .list-group-item {
     padding: 10px 15px 15px 15px;
 }
@@ -12,7 +15,7 @@
     /*background: #363b48;*/
     background: #384B6B;
     color: #9b9ca1;
-    min-width: 1200px;
+    /*min-width: 1200px;*/
     margin: auto;
     padding: 10px 0;
     height: 60px;
@@ -21,10 +24,11 @@
 }
 #footer .footer-inner {
     margin: 0 auto;
-    width: 1200px;
+    width: 100%;
 }
 #footer .footer-about {
-    margin-top: 10px;
+    padding-top: 10px;
+    margin-bottom: 0px;
 }
 
 body {
