tuning css of base

--- a/server/vine_comment/static/css/base.css
+++ b/server/vine_comment/static/css/base.css
@@ -1,4 +1,11 @@
+html, body {
+    height: 100%;
+}
 .container.main {
+    min-height: 100%;
+    height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+    height: 100%;
+    margin: 0 auto 0px; /* the bottom margin is the negative value of the footer's height */
     padding: 0;
 }
 .list-group-item {
