--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -146,8 +146,8 @@
 <script type="text/javascript">$('a').tooltip();</script>
 <!-- XXX: use popup_message in commentBoard.js -->
 <script type="text/javascript" src="{% static 'js/commentBoard.js' %}"></script>
-  <link href="{% static 'bootstrap-dialog/css/bootstrap-dialog.min.css' %}" rel="stylesheet" type="text/css" />
-  <script src="{% static 'bootstrap-dialog/js/bootstrap-dialog.min.js' %}"></script>
+<link href="{% static 'bootstrap-dialog/css/bootstrap-dialog.min.css' %}" rel="stylesheet" type="text/css" />
+<script src="{% static 'bootstrap-dialog/js/bootstrap-dialog.min.js' %}"></script>
 
 <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/wysihtml5/0.3.0/wysihtml5.min.js"></script>
@@ -224,7 +224,7 @@ $(document).ready(function() {
 });
 
 function url_post_comment() {
-    var urlpostform = '<form method="post" action="/comment/xxx" enctype="multipart/form-data" id="urlpostForm" onsubmit="return prepost(event);"> '+
+    var urlpostform = '<form method="post" action="/comment/" enctype="multipart/form-data" id="urlpostForm" onsubmit="return prepost(event);"> '+
                         '<input type="hidden" name="csrfmiddlewaretoken" value="3y7OqhlDip0Gvwkr6uqXDFagDw5kC7JR" />'+
                           '<div id="div_id_url" class="form-group"><label for="id_url" class="control-label  requiredField">'+
                             'Url<span class="asteriskField">*</span></label><div class="controls "><textarea class="textarea form-control" cols="40" id="id_url" name="url" rows="10" style="resize:none"></textarea></div></div><div id="div_id_comment_str" class="form-group"><label for="id_comment_str" class="control-label  requiredField">'+
