try to get pageshot in extension, not work yet

--- a/server/vine_comment/vine_comment/templates/plugin/base.html
+++ b/server/vine_comment/vine_comment/templates/plugin/base.html
@@ -139,6 +139,7 @@
     {% endblock %}
   </div>
 </div>
+<div id="target_page" style="display:none"></div>
 </body>
 <!--
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
