refine the msg list type margin

--- a/server/vine_comment/vine_comment/templates/plugin/comment_list.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_list.html
@@ -62,7 +62,7 @@
 
 <div>
 
-    <ul style="list-style-type:none; padding:10px;margin:0; ">
+    <ul style="list-style-type:none; padding:10px;margin:10px; ">
         <li data-role="post-sort" class="dropdown sorting" style="text-align:left;float:left; margin-right: 20px;">
             <a href=javascript:void(0); class="dropdown-toggle" data-nav="conversation" data-toggle="dropdown">
             <b id="msg_list_type">最新评论</b>
