--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
@@ -305,7 +305,7 @@ $(function(){
         </div>
     </form>
 
-<div id="showMsg">
+<div id="showMsg" style="margin-top:0px">
 	{% include "plugin/comment_list.html" %}
 </div> <!-- /#showMsg -->
 {% endblock %}
