beautify emotion button of post comment by fontawesome

--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
@@ -279,12 +279,13 @@ $(function(){
                 <ul class="wysiwyg">
                     <li style="float:left; margin-right: 5px;">
                         <a class="vc-toolbar-button" title="插入表情">
-                            <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/expression.jpg' %}" />
+                            <!--img src="//{{ request.META.HTTP_HOST }}{% static 'icons/expression.jpg' %}" /-->
+                            <i style="font-size:150%" class="fa fa-smile-o"></i>
                         </a>
                     </li>
                     <li style="float:left; margin-right: 5px;">
                         <a class="vc-toolbar-button" title="插入图片">
-                            <i class="fa fa-paperclip"></i>
+                            <i style="font-size:150%" class="fa fa-paperclip"></i>
                         </a>
                     </li>
                 </ul>
