--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
@@ -221,7 +221,8 @@ border: 2px solid #cbd2d6;
 border: 2px solid rgba(0,39,59,.2);
 border-radius: 4px;
 width:100%;height:30px;
-resize:none
+resize:none;
+top:55px;
 }
 </style>  
 <script>
@@ -241,10 +242,8 @@ $(function(){
 		  </div>
 		</div>
  
-
-      
-    <textarea class="vc-form-show" placeholder="我来说两句"></textarea>
-    <form class="vc-form">
+    <textarea class="navbar-fixed-top vc-form-show" placeholder="我来说两句"></textarea>
+    <form class="vc-form" >
         <div class="postbox">
                 <div class="avatar">
                     <span class="user">
